# MeshExpander

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: README_JA.md  gen_carving_gif.py  gen_demo_gif.py  gen_rotate_gif.py
include/expander/: AssemblyExpander.hpp  BoxExpander.hpp  ClippingEngine.hpp  ConservativeExpander.hpp  IExpander.hpp  IModelExporter.hpp  IModelLoader.hpp  MathUtils.hpp  Mesh.hpp  RobustSlicer.hpp  StlReader.hpp  StlWriter.hpp  VoxelGrid.hpp
include/io/: AssimpExporter.hpp  AssimpLoader.hpp
python/: meshexpander_core.cpp
python/meshexpander/: __init__.py  meshexpander.pyi  meshexpander_core.cp312-win_amd64.pyd  meshexpander_core.cp37-win_amd64.pyd
scripts/: build.ps1  build.sh  ply_to_stl.py
src/: AssemblyExpander.cpp  BoxExpander.cpp  ClippingEngine.cpp  ConservativeExpander.cpp  RobustSlicer.cpp  VoxelGrid.cpp
src/cli/: main.cpp
src/io/: AssimpExporter.cpp  AssimpLoader.cpp
tests/data/: README.md
tests/integration/: test_assembly_expansion.cpp  test_cad_shapes.cpp  test_complex_assembly.cpp  test_complex_shapes.cpp  test_concave_expansion.cpp  test_shape_expansion.cpp  test_stanford_bunny.cpp
tests/io/: test_assimp_io.cpp
tests/python/: test_meshexpander.py
tests/unit/: test_assembly_expander.cpp  test_box_expander.cpp  test_clipping_engine.cpp  test_conservative_expander.cpp  test_math_utils.cpp  test_robust_slicer.cpp  test_voxel_grid.cpp
